Fixed horizontal scroll problem

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,13 +3,13 @@
 .app {
   color: $foreground-color;
   background: $background-color;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  //height: 100vh;
 
   .topBar {
     position: absolute;
     top: 0;
-    width: 100vw;
+    width: 100%;
     z-index: 4;
 
     .menu {
